--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-node_modules/
-client/node_modules/
-server/node_modules/
+node_modules
+client/node_modules
+server/node_modules
 .env
-.env.local
-.DS_Store
-dist/
-client/dist/
+dist
