--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "punch-app",
+  "name": "Punchapp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "install:all": "cd server && npm ci && cd ../client && npm ci",
+    "install:all": "cd server && npm install && cd ../client && npm install",
     "build": "cd client && npm run build",
-    "start": "node server/index.js",
-    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\""
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.0"
+    "start": "node server/index.js"
   }
 }
