--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "punch-app-server",
+  "name": "Punchapp-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "couchbase": "^4.4.0",
+    "couchbase": "^4.2.0",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "uuid": "^9.0.0",
-    "body-parser": "^1.20.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5"
   }
 }
