--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "Punchapp",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "install:all": "cd server && npm install && cd ../client && npm install",
+    "install-client": "cd client && npm install",
     "build": "cd client && npm run build",
     "start": "node server/index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "couchbase": "^4.3.0"
   }
 }
