--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-   "dev": "npx vite",
-  "build": "npx vite build",
-  "preview": "npx vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
+    "vite": "^5.4.0",
     "@vitejs/plugin-react": "^4.2.0"
   }
 }
