--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
+    "react-dom": "^18.3.1",
     "vite": "^5.4.0",
     "@vitejs/plugin-react": "^4.2.0"
   }
