--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "couchbase": "^4.3.0"
+    "couchbase": "^4.3.0",
+    "dotenv": "^16.4.5"
   },
   "engines": {
     "node": "20.x"
