--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "couchbase": "^4.3.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "20.x"
