--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node server/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "couchbase": "^4.3.0",
-    "dotenv": "^16.4.5",
-    "cors": "^2.8.5"
+   "cors": "^2.8.5",
+  "dotenv": "^16.0.3",
+  "express": "^4.18.2",
+  "jsonwebtoken": "^9.0.0",
+  "body-parser": "^1.20.2"
   },
   "engines": {
     "node": "20.x"
