--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^5.4.0"
   }
 }
