--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.1"
+ "@vitejs/plugin-react": "^4.2.1",
+  "vite": "^5.4.0"
   }
 }
