--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "install-client": "cd client && npm install",
-    "build": "cd client && npm run build"
+  "build": "cd client && npm run build",
+  "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
